--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,9 @@
 <h1>Your Text Analysis</h1>
 
-<h2>Number of Words: <% analyze_text.count_of_words %></h2>
+<h2>Number of Words: <% analyzed_text.count_of_words %></h2>
 
-<h2>Vowels: <% analyze_text.count_of_vowels %></h2>
+<h2>Vowels: <% analyzed_text.count_of_vowels %></h2>
 
-<h2>Consonants: <% analyze_text.count_of_consonants %></h2>
+<h2>Consonants: <% analyzed_text.count_of_consonants %></h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<h2>Most Common Letter: _____ used _____ times <% analyzed_text.count</h2>
