--- a/views/results.erb
+++ b/views/results.erb
@@ -6,4 +6,4 @@
 
 <h2>Consonants: <% analyzed_text.count_of_consonants %></h2>
 
-<h2>Most Common Letter: _____ used _____ times <% analyzed_text.most_used_letters</h2>
+<h2>Most Common Letter: _____ used _____ times <% analyzed_text.most_used_letters.key[0]</h2>
