--- a/views/results.erb
+++ b/views/results.erb
@@ -6,4 +6,4 @@
 
 <h2>Consonants: <% analyzed_text.count_of_consonants %></h2>
 
-<h2>Most Common Letter: _____ used _____ times <% analyzed_text.most_used_letter.key[0].upcase %> <% analyzed_text.most_used_letter.values[0]</h2>
+<h2>Most Common Letter: _____ used _____ times <% analyzed_text.most_used_letter.key[0].upcase %> <% analyzed_text.most_used_letter.values[0] %></h2>
